# mylock

./: a.out  configure  configure.in  control  control.c  cscope.out  lclock.h  make.sh  tags  test  test.c  test1  test1.c  time.c
autom4te.cache/: output.0  traces.0
log/: lclock.txt  mutex.txt  spinlock.txt
